# marketplace_helper

./: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: api_router.py  main.py
app/core/: config.py  database.py
app/migrations/: env.py
app/migrations/versions/: 21fa6edbe492_new_settings_and_wb_feedback_table_added.py  38e5f90dd60f_wb_supplier_name_added_to_user.py
app/pages/: router.py
app/static/js/: index.js
app/templates/: base.html  index.html
app/user/: models.py  router.py  security.py  service.py
app/users/: models.py  router.py  service.py
app/wb/: models.py  router.py  service.py
marketplace_helper_api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
marketplace_helper_api/app/: api_router.py
marketplace_helper_api/app/core/: config.py
marketplace_helper_api/app/generator/: router.py  service.py
marketplace_helper_api/app/migrations/: env.py
marketplace_helper_api/app/migrations/versions/: a01a51faf75d_removed_wb_feedback_table.py  c8cd738f96a6_init.py
marketplace_helper_api/app/services/: reply_generator_service.py
marketplace_helper_api/app/users/: router.py  service.py
marketplace_helper_api/app/wb/: models.py  router.py  service.py
marketplace_helper_web/: .prettierrc  .stylelintrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json
marketplace_helper_web/public/: config.js
marketplace_helper_web/src/: app.tsx  index.css  vite-env-override.d.ts
marketplace_helper_web/src/adapters/: index.ts  map-api-to-feedback.ts  (+3 more)
scripts/: api.sh  web.sh
(+86 files in other folders)
